update email article

--- a/content/邮箱/申请邮箱账号.md
+++ b/content/邮箱/申请邮箱账号.md
@@ -11,7 +11,9 @@ Lang: zh
 ### 针对学生的申请流程
 
 1. 针对方便来信息技术中心办公室的办理的，可以携带**一卡通**、**身份证**、**学生证**到礼贤楼2201即刻办理，工作人员会扫描相关证件并且记录用户手机号码以及2～3个备选的邮箱账号名，之后办理好会通过电话通知。
-2. 针对不方便来信息技术中心办公室的办理的，可以把**一卡通（正面）**、**身份证（两面）**、**学生证（里面第一页）**通过扫描或拍照等方法放到一张图片上，并且注明自己的手机号码以及2～3个备选的邮箱账号名，如下图所示，发到[callcenter@ynu.edu.cn](callcenter@ynu.edu.cn)邮箱，并且拨打`65031141`电话通知，相关工作人员办理好之后会通过电话通知。
+2. 针对不方便来信息技术中心办公室的办理的，可以把**一卡通（正面）**、**身份证（两面）**、**学生证（里面第一页）**通过扫描或拍照等方法放到一张图片上，并且注明自己的手机号码以及2～3个备选的邮箱账号名，如下图所示，发到[65031141@ynu.edu.cn](mailto:65031141@ynu.edu.cn)邮箱，并且拨打`65031141`电话通知，相关工作人员办理好之后会通过电话通知。
+
+![申请邮箱账号相关信息图示](/images/apply_for_email_account.jpg)
 
 ### 针对老师的申请流程
 
