--- a/content/其他/勒索病毒补丁校内下载.md
+++ b/content/其他/勒索病毒补丁校内下载.md
@@ -4,9 +4,8 @@ Tags: 勒索病毒补丁
 Summary: 勒索病毒补丁校内下载
 Author: 运维服务部（65031141）
 
-### 勒索病毒补丁校内下载
 
-##### 目前从微软官网下载[MS17-010补丁][Microsoft 安全公告 MS17-010 - 严重]、[KB4012598][KB4012598]速度较慢，我们为同学们提供了已经下载好的补丁，方便大家使用.
+###### 目前从微软官网下载[MS17-010补丁][Microsoft 安全公告 MS17-010 - 严重]、[KB4012598][KB4012598]速度较慢，我们为同学们提供了已经下载好的补丁，方便大家使用.
 
 ### 校内补丁下载站: [http://resources.ynu.edu.cn/wannacry/](http://resources.ynu.edu.cn/wannacry/)
 
